--- a/register.html
+++ b/register.html
@@ -15,7 +15,7 @@
     <div class="container">
         <div class="wrapper">
             <h1 class="title">Registration Page</h1>
-            <form action="#" class="site-form">
+            <form action="#" id="form" class="site-form">
                 <label>
                     <span class="zmdi zmdi-account"></span>
                     <input type="text" id="usernameInput" placeholder="Your name" required>
@@ -36,6 +36,7 @@
             <img src="img/signup-image.jpg" alt="signup-image" class="signup-image">
         </div>
     </div>
-
+<script src="./js/util.js"></script>
+<script src="./js/register.js"></script>
 </body>
 </html>
