--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <div class="wrapper sign-in">
-            <form action="#" class="site-form">
+            <form action="#" id='form' class="site-form">
                 <h1 class="title">Sign in</h1>
                 <label>
                     <span class="zmdi zmdi-account"></span>
@@ -31,6 +31,7 @@
             <img src="img/signin-image.jpg" alt="signin-image" class="signin-image">
         </div>
     </div>
-
+<script src="./js/util.js"></script>
+<script src="./js/register.js"></script>
 </body>
 </html>
