--- a/login.html
+++ b/login.html
@@ -32,6 +32,6 @@
         </div>
     </div>
 <script src="./js/util.js"></script>
-<script src="./js/register.js"></script>
+<script src="./js/login.js"></script>
 </body>
 </html>
