--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </header>
         <main class="main">
             <div class="left-menu-wrapper">
-                <ul class="navbar-list">
+                <ul class="navbar-list" id="users">
                     <h1>YouTube Members</h1>
                     <li class="channel active" data_id="main">
                         <a href="#">
