--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YouTube</title>
-
+    <script>
+        let token = window.localStorage.getItem('token');
+        let user = window.localStorage.getItem('user')
+        if(token && user){
+            admin.href = './admin.html';
+            admin_rasm.src = `http://localhost:9090/${user.fileName}`
+        }
+    </script>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
@@ -51,8 +58,8 @@
                 <button class="hover-after">
                     <svg viewbox="0 0 24 24" focusable="false" style="pointer-events: none; display: block; width: 30px; height: 24px;"><g><path d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.9 2 2 2zm6-6v-5c0-3.07-1.64-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2z"></path></g></svg>
                 </button>
-                <a id="admin" href="./admin.html">
-                    <img id="admin_rasm" class="avatar-img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSiul96pLc_HuG4WJlNkFYukreZ-6_pL7dUIw&usqp=CAU" alt="avatar-img" width="32px" height="32px">
+                <a id="admin" href="">
+                    <img id="admin_rasm" class="avatar-img" src="" alt="avatar-img" width="32px" height="32px">
                 </a>
             </section>
         </header>
