--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <script>
         let token = window.localStorage.getItem('token');
         let user = window.localStorage.getItem('user')
-        if(token && user){
-            admin.href = './admin.html';
-            admin_rasm.src = `http://localhost:9090/${user.fileName}`
-        }
+        // if(token && user){
+        //     admin.href = './admin.html';
+        //     admin_rasm.src = `http://localhost:9090/${user.fileName}`
+        // }
     </script>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
