--- a/admin.html
+++ b/admin.html
@@ -24,7 +24,7 @@
         <main class="main">
             <div class="wrapper">
                 <h1 class="title">Upload a video</h1>
-                <form action="#" class="site-form">
+                <form action="#" class="site-form" id="form">
                     <label>
                         <input type="text" id="videoInput" placeholder="video title" required>
                     </label>
@@ -38,16 +38,13 @@
                 <img src="img/signin-image.jpg" class="signup-image">
             </div>
             <div class="admin-wrapper">
-                <ul class="videos-list">
-                    <li class="video-item">
-                        <video src="https://www.w3schools.com/html/mov_bbb.mp4" controls=""></video>
-                        <p class="content" data-id="2" contenteditable="true">dars</p>
-                        <img src="./img/delete.png" width="25px" alt="upload" class="delete-icon" data-id="2">
-                    </li>
+                <ul class="videos-list" id="videosList">
+                    
                 </ul>
             </div>
         </main>
     </div>
-
+<script src="/js/util.js"></script>
+<script src="/js/admin.js"></script>
 </body>
 </html>
